--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <header>
             <div class="center">
-                <img src="./img/REFORMADORA-RETOK-20-08-2024.png"></img>
+                <img src="REFORMADORA-RETOK-20-08-2024.png"></img>
             </div>
             <h1><strong>S E R V I Ç O S</strong>
             </h1>
