--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 
         <header>
             <div class="center">
-                <img src="REFORMADORA-RETOK-20-08-2024.png"></img>
+                <img src="./img/REFORMADORA-RETOK-20-08-2024.png"></img>
             </div>
-            <h1><strong>S E R V I Ç O S</strong>
-            </h1>
-            <h2>
-                Lanternagem Pintura Polimento
-            </h2>
-            
         </header>
+        <h1><strong>S E R V I Ç O S</strong>
+        </h1>
+        <h2>
+            Lanternagem Pintura Polimento
+        </h2>
     </div>
     
 
